# device

./: B.js  CMakeLists.txt  README.md  T.html  Test.cpp  Test.h  Test1.cpp  Test2.cpp  Test3.cpp  Test5.html
include/: AmplifierWidget.h  ConfigWindow.h  DataTypes.h  GraphWidget.h  HydroWidget.h  LoginWindow.h  MainWindow.h  StyleManager.h  ToolsWidget.h
src/: AmplifierWidget.cpp  ConfigWindow.cpp  GraphWidget.cpp  HydroWidget.cpp  LoginWindow.cpp  LoginWindow.ui  MainWindow.cpp  MainWindow.ui  StyleManager.cpp  ToolsWidget.cpp  main.cpp
